...
            }
        }
    }
    
    private func aboutSection(pokemon: PokemonDetail) -> some View {
        VStack(alignment: .leading, spacing: 16) {
            Text("About")
                .font(.title3)
                .fontWeight(.bold)
            
            HStack(spacing: 40) {
                VStack(spacing: 8) {
                    HStack {
...
        }
        .frame(maxWidth: .infinity, alignment: .leading)
    }
    
    private func statsSection(pokemon: PokemonDetail) -> some View {
        VStack(alignment: .leading, spacing: 16) {
            Text("Base Stats")
                .font(.title3)
                .fontWeight(.bold)
            
            ForEach(pokemon.stats) { stat in
                HStack(spacing: 16) {
                    Text(stat.stat.name.capitalized.replacingOccurrences(of: "-", with: " "))
...
